# blog

./: README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django-ci.yml
blog/: settings.py  urls.py
blog/core/templates/: index.html
blog/core/tests/: test_wsgi.py  tests_app.py  tests_urls.py  tests_views.py
contrib/: env-sample
