[tool.poetry]
name = "blog-project"
version = "0.1.0"
description = "My personal and professional Blog."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GNU General Public License v3 or later (GPLv3+)"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
