[tool.poetry]
name = "blog-project"
version = "0.1.0"
description = "My personal and professional Blog."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GNU General Public License v3 or later (GPLv3+)"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.3"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
django-s3-folder-storage = "^0.5"
Collectfast = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-django = "^4.1.0"
ipdb = "^0.13.4"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "blog.settings"
python_files = [
    "test*.py",
     "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "blog/core/tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
